--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "ytpl": "^2.3.0"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
